--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -1,15 +1,13 @@
-[core]
+# [core]
 txindex=1
-datadir=/data/resources
+datadir=/home/coinuser/data/resources
 
-[rpc]
+# [rpc]
 server=1
 rpcbind=0.0.0.0
 rpcauth=
 rpcport=8332
 rpcallowip=0.0.0.0/0
 
-
-[wallet]
-wallet=/data/wallets
+# [wallet]
 walletnotify=/data/scripts/walletnotify.sh\ %s
